# python-pachyderm

./: .bumpversion.cfg  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  contributing.md  deploy.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  version.json
.circleci/: config.yml
ci/: before_install.sh  before_script.sh
docs/: python_pachyderm.html  python_pachyderm.m.html  release_instructions.md  requirements.txt
docs/python_pachyderm/: admin.m.html  client.html  client.m.html  index.html  pfs.html  pfs.m.html  pfs_client.html  pfs_client.m.html  pps.html  pps.m.html  pps_client.html  pps_client.m.html  service.html  spout.html  transaction.m.html  util.html  util.m.html  version.html  version.m.html
docs/source/: conf.py  python_pachyderm.experimental.proto.rst  python_pachyderm.experimental.proto.v2.pfs_v2.rst  python_pachyderm.experimental.proto.v2.proxy.rst  (+3 more)
examples/: opencv.py
proto/: Dockerfile  pfs.proto  pps.proto  requirements.txt  run
pypachy/: __init__.py  client.py  pfs_client.py  pfs_pb2.py  pfs_pb2_grpc.py  pps_client.py  pps_pb2.py
tests/: __init__.py  health.py  test_admin.py  test_auth.py  test_client.py  test_debug.py  test_enterprise.py  test_experimental.py  test_get_version.py  test_identity.py  test_pfs.py  test_pfs_client.py  test_pps.py  test_pps_client.py  test_pypachy.py  test_spout.py  test_transaction.py  test_util.py  test_version.py  test_worker.py  util.py
(+639 files in other folders)
